src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    html {
        color-scheme: light dark;
    }
    [data-theme="light"] {
        color-scheme: light;
    }
    [data-theme="dark"] {
        color-scheme: dark;
    }
    :root {
        --white: oklch(1 0 0);
        --black: oklch(0 0 0);
        --default: light-dark(var(--black), var(--white));
        --inverted: light-dark(var(--white), var(--black));
        --background: light-dark(
            oklch(0.9429 0.0029 264.5),
            oklch(0.13 0.028 261.692)
        ); /* NHN */
        --foreground: light-dark(
            oklch(0.3516 0.0187 264.3),
            oklch(0.8545 0.0115 269.5)
        ); /* NHN */
        --card: light-dark(
            oklch(0.9429 0.0029 264.5),
            oklch(0.21 0.034 264.665)
        );
        --card-foreground: light-dark(
            oklch(0.13 0.028 261.692),
            oklch(0.985 0.002 247.839)
        );
        --popover: light-dark(
            oklch(0.9429 0.0029 264.5),
            oklch(0.21 0.034 264.665)
        );
        --popover-foreground: light-dark(
            oklch(0.13 0.028 261.692),
            oklch(0.985 0.002 247.839)
        );
        --primary: light-dark(
            oklch(0.21 0.034 264.665),
            oklch(0.928 0.006 264.531)
        );
        --primary-foreground: light-dark(
            oklch(0.985 0.002 247.839),
            oklch(0.21 0.034 264.665)
        );
        --secondary: light-dark(
            oklch(0.967 0.003 264.542),
            oklch(0.278 0.033 256.848)
        );
        --secondary-foreground: light-dark(
            oklch(0.21 0.034 264.665),
            oklch(0.985 0.002 247.839)
        );
        --muted: var(--stroke); /* NHN */
        --muted-foreground: light-dark(
            oklch(0.5655 0.01472 266.647),
            oklch(0.6726 0.01727 266.252)
        ); /* NHN */
        --accent: var(--stroke); /* NHN */
        --accent-foreground: light-dark(
            oklch(0.21 0.034 264.665),
            oklch(0.985 0.002 247.839)
        );
        --destructive: light-dark(
            oklch(0.577 0.245 27.325),
            oklch(0.704 0.191 22.216)
        );
        --border: light-dark(oklch(0.928 0.006 264.531), oklch(1 0 0 / 10%));
        --input: var(--stroke); /* NHN */
        --ring: light-dark(
            oklch(0.707 0.022 261.325),
            oklch(0.551 0.027 264.364)
        );
        --chart-1: light-dark(
            oklch(0.646 0.222 41.116),
            oklch(0.488 0.243 264.376)
        );
        --chart-2: light-dark(
            oklch(0.6 0.118 184.704),
            oklch(0.696 0.17 162.48)
        );
        --chart-3: light-dark(
            oklch(0.398 0.07 227.392),
            oklch(0.769 0.188 70.08)
        );
        --chart-4: light-dark(
            oklch(0.828 0.189 84.429),
            oklch(0.627 0.265 303.9)
        );
        --chart-5: light-dark(
            oklch(0.769 0.188 70.08),
            oklch(0.645 0.246 16.439)
        );

        --highlighted: light-dark(
            oklch(0.666 0.15222 239.89),
            oklch(0.692 0.1595 240.4)
        );
        --alert: oklch(63.7% 0.237 25.331);

        --pattern: light-dark(
            oklch(0.8759 0.0029 264.5),
            oklch(from var(--stroke) calc(l - 0.015) c h)
        );
        --stroke: light-dark(
            oklch(0.8759 0.0029 264.5),
            oklch(0.2322 0.0162 252.5)
        );

        --element-hover: light-dark(
            oklch(from var(--background) calc(l - 0.015) c h),
            oklch(from var(--background) calc(l + 0.05) c h)
        );
    }
}

@layer base {
    :root {
        --px: 0.09375rem;
        font-size: 0.937135vw;

        @apply 2xl:text-base;
    }

    * {
        @apply border-stroke decoration-current/40 decoration-dotted decoration-[0.1em] underline-offset-[0.16em] outline-stroke dark:decoration-current/60;
    }
    a:-webkit-any-link:focus-visible {
        @apply shadow-[0_0_0_.3125rem] shadow-highlighted/30 -outline-offset-1 outline-highlighted outline;
    }
    address {
        @apply not-italic;
    }
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        @apply scroll-mt-[calc(var(--spacing)*3.25+var(--px)+var(--spacing)*20)];
    }
    hr {
        @apply h-[unset] border-t-0;
    }
    svg {
        @apply overflow-visible;
    }
    input[type="search"]::-webkit-search-cancel-button {
        @apply hidden;
    }
}

@layer base {
    :root {
        --radius-xs: 0.125rem;
        --radius-sm: 0.25rem;
        --radius-md: 0.375rem;
        --radius-lg: 0.5rem;
        --radius-xl: 0.75rem;
        --radius-2xl: 1rem;
    }
    @supports (corner-shape: superellipse(1)) {
        :root {
            --radius-xs: 0.25rem;
            --radius-sm: 0.375rem;
            --radius-md: 0.5rem;
            --radius-lg: 0.75rem;
            --radius-xl: 1rem;
            --radius-2xl: 1.5rem;
        }
        [class*="rounded-"]:not(.rounded-full),
        [class*="before:rounded-"]:not(.before\:rounded-full)::before,
        [class*="after:rounded-"]:not(.after\:rounded-full)::after {
            @apply corner-superellipse;
        }
    }
}

@layer base {
    @view-transition {
        navigation: auto;
    }
    /* :root {
        view-transition-name: none;
    } */

    ::view-transition-group(*) {
        @apply animation-duration-700 animation-ease-in-out;
    }
    ::view-transition-group(project-name-dot) {
        @apply animation-delay-500;
    }
    /* ::view-transition-group(header),
    ::view-transition-group(toc-divider-search),
    ::view-transition-group(progress-bar),
    ::view-transition-group(toc-divider-menu),
    ::view-transition-group(menu) {
        @apply z-50 !animate-none !animation-duration-0 !animation-delay-0;
    } */
    /* ::view-transition-group(pattern) {
        @apply !-z-50 !animate-none;
    } */
    /* ::view-transition-new(pattern),
    ::view-transition-old(pattern) {
        @apply fixed inset-0 size-full !opacity-100;
    } */
    /* ::view-transition-new(pattern), */
    ::view-transition-group(sidebar) {
        @apply !animate-none;
    }
    /* Prevent main from being fade in/out while keep text transitioning */
    /* ::view-transition-group(main) {
        @apply !animate-none;
    } */
    /* Prevent old snapshot from being visible while keep text transitioning */
    /* ::view-transition-old(main) {
        @apply !opacity-0;
    } */

    @media (prefers-reduced-motion: reduce) {
        ::view-transition-old(*),
        ::view-transition-new(*),
        ::view-transition-group(*) {
            @apply !animation-duration-0 !animation-delay-0;
        }
    }
}

/* @layer utilities {
    @keyframes enable-vt {
        0%,
        100% {
            view-transition-name: none;
        }
        0.01%,
        99.99% {
            view-transition-name: revert !important;
        }
    }

    .vt-element {
        view-timeline-name: --enable-vt;
        view-timeline-axis: block;

        animation: linear enable-vt both;
        animation-timeline: view();

        animation-range: cover;
    }
} */

